server management api added
